bug with notification fixed